--- a/u_memo.lfm
+++ b/u_memo.lfm
@@ -1,24 +1,23 @@
 object frmMemo: TfrmMemo
-  Left = 1058
-  Height = 300
-  Top = 341
-  Width = 400
+  Left = 991
+  Height = 240
+  Top = 303
+  Width = 320
   BorderStyle = bsSizeToolWin
   Caption = 'Анализ графика'
-  ClientHeight = 300
-  ClientWidth = 400
-  DesignTimePPI = 120
-  Font.Height = -26
+  ClientHeight = 240
+  ClientWidth = 320
+  Font.Height = -21
   OnClose = FormClose
-  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '2.0.10.0'
   object Memo1: TMemo
     Left = 0
-    Height = 300
+    Height = 240
     Top = 0
-    Width = 400
+    Width = 320
     Align = alClient
-    Font.Height = -26
+    Font.Name = 'Courier New'
     Lines.Strings = (
       'Memo1'
     )
