--- a/u_newexpopts.lfm
+++ b/u_newexpopts.lfm
@@ -1,132 +1,132 @@
 object frmNewExp: TfrmNewExp
   Left = 426
-  Height = 321
+  Height = 257
   Top = 326
-  Width = 1039
+  Width = 831
   BorderStyle = bsDialog
   Caption = 'Настройки экспорта в Эксель (именной график)'
-  ClientHeight = 321
-  ClientWidth = 1039
-  DesignTimePPI = 120
+  ClientHeight = 257
+  ClientWidth = 831
   DoubleBuffered = False
-  Font.Height = -26
+  Font.Height = -21
+  OnClose = FormClose
   ParentDoubleBuffered = False
   ShowHint = True
   LCLVersion = '2.0.10.0'
   object leColFirstDay: TLabeledEdit
-    Left = 850
-    Height = 44
+    Left = 680
+    Height = 33
     Hint = 'Колонка, начиная с которой происходит импорт данных.'#13#10'Нумерация на листе Excel начинаяется c 1 '
-    Top = 70
-    Width = 180
-    EditLabel.Height = 36
-    EditLabel.Width = 281
+    Top = 56
+    Width = 144
+    EditLabel.Height = 25
+    EditLabel.Width = 227
     EditLabel.Caption = 'Колонка первого числа'
     EditLabel.ParentColor = False
     EditLabel.ParentFont = False
-    EditLabel.Font.Height = -26
-    Font.Height = -26
+    EditLabel.Font.Height = -21
+    Font.Height = -21
     LabelPosition = lpLeft
     ParentFont = False
     TabOrder = 0
     Text = 'leColFirstDay'
   end
   object leRowFirstWorker: TLabeledEdit
-    Left = 850
-    Height = 44
+    Left = 680
+    Height = 33
     Hint = 'Строка, начиная с которой происходит импорт графика'#13#10'Нумерация на листе Excel начинаяется c 1 '
-    Top = 120
-    Width = 180
-    EditLabel.Height = 36
-    EditLabel.Width = 306
+    Top = 96
+    Width = 144
+    EditLabel.Height = 25
+    EditLabel.Width = 249
     EditLabel.Caption = 'Первая строка работника'
     EditLabel.ParentColor = False
     EditLabel.ParentFont = False
-    EditLabel.Font.Height = -26
-    Font.Height = -26
+    EditLabel.Font.Height = -21
+    Font.Height = -21
     LabelPosition = lpLeft
     ParentFont = False
     TabOrder = 1
     Text = 'leRowFirstWorker'
   end
   object GroupBox1: TGroupBox
-    Left = 10
-    Height = 251
-    Top = 60
-    Width = 521
+    Left = 8
+    Height = 201
+    Top = 48
+    Width = 417
     Caption = 'Регулировка нормы времени'
-    ClientHeight = 210
-    ClientWidth = 517
-    Font.Height = -26
+    ClientHeight = 171
+    ClientWidth = 413
+    Font.Height = -21
     ParentFont = False
     TabOrder = 2
     object leRowManFirst: TLabeledEdit
-      Left = 320
-      Height = 44
+      Left = 256
+      Height = 33
       Hint = 'Первая строка, куда будет производится импорт'#13#10'данных по регулироке нормы времени'
-      Top = 10
-      Width = 180
-      EditLabel.Height = 36
-      EditLabel.Width = 173
+      Top = 8
+      Width = 144
+      EditLabel.Height = 25
+      EditLabel.Width = 142
       EditLabel.Caption = 'Строка начала'
       EditLabel.ParentColor = False
       EditLabel.ParentFont = False
-      EditLabel.Font.Height = -26
-      Font.Height = -26
+      EditLabel.Font.Height = -21
+      Font.Height = -21
       LabelPosition = lpLeft
       ParentFont = False
       TabOrder = 0
       Text = 'leRowManFirst'
     end
     object leColDate: TLabeledEdit
-      Left = 320
-      Height = 44
+      Left = 256
+      Height = 33
       Hint = 'Колонка, в которую будет производится '#13#10'импорт дат для регулировки времени'
-      Top = 60
-      Width = 180
-      EditLabel.Height = 36
-      EditLabel.Width = 163
+      Top = 48
+      Width = 144
+      EditLabel.Height = 25
+      EditLabel.Width = 135
       EditLabel.Caption = 'Колонка даты'
       EditLabel.ParentColor = False
       EditLabel.ParentFont = False
-      EditLabel.Font.Height = -26
-      Font.Height = -26
+      EditLabel.Font.Height = -21
+      Font.Height = -21
       LabelPosition = lpLeft
       ParentFont = False
       TabOrder = 1
       Text = 'leColDate'
     end
     object leColTime: TLabeledEdit
-      Left = 320
-      Height = 44
+      Left = 256
+      Height = 33
       Hint = 'Колонка, в которой отображается время работы'
-      Top = 110
-      Width = 180
-      EditLabel.Height = 36
-      EditLabel.Width = 212
+      Top = 88
+      Width = 144
+      EditLabel.Height = 25
+      EditLabel.Width = 169
       EditLabel.Caption = 'Колонка времени'
       EditLabel.ParentColor = False
       EditLabel.ParentFont = False
-      EditLabel.Font.Height = -26
-      Font.Height = -26
+      EditLabel.Font.Height = -21
+      Font.Height = -21
       LabelPosition = lpLeft
       ParentFont = False
       TabOrder = 2
       Text = 'leColTime'
     end
     object leColWorker: TLabeledEdit
-      Left = 320
-      Height = 44
+      Left = 256
+      Height = 33
       Hint = 'Фамилия работника, участвующего в регулировке нормы времени'
-      Top = 160
-      Width = 180
-      EditLabel.Height = 36
-      EditLabel.Width = 232
+      Top = 128
+      Width = 144
+      EditLabel.Height = 25
+      EditLabel.Width = 188
       EditLabel.Caption = 'Колонка работника'
       EditLabel.ParentColor = False
       EditLabel.ParentFont = False
-      EditLabel.Font.Height = -26
-      Font.Height = -26
+      EditLabel.Font.Height = -21
+      Font.Height = -21
       LabelPosition = lpLeft
       ParentFont = False
       TabOrder = 3
@@ -134,55 +134,38 @@ object frmNewExp: TfrmNewExp
     end
   end
   object btExport: TButton
-    Left = 550
-    Height = 56
+    Left = 440
+    Height = 45
     Hint = 'Начинает экспорт. Должен быть открыт документ,'#13#10'в который происходит экспорт'
-    Top = 255
-    Width = 202
+    Top = 204
+    Width = 162
     Caption = 'Экспорт'
-    Font.Height = -28
+    Font.Height = -22
     OnClick = btExportClick
     ParentFont = False
     TabOrder = 3
   end
   object btCancel: TButton
-    Left = 828
-    Height = 56
+    Left = 662
+    Height = 45
     Hint = 'Закрывает форму'
-    Top = 255
-    Width = 202
+    Top = 204
+    Width = 162
     Cancel = True
     Caption = 'Отмена'
-    Font.Height = -28
+    Font.Height = -22
     ModalResult = 2
     ParentFont = False
     TabOrder = 4
   end
-  object leDocName: TLabeledEdit
-    Left = 300
-    Height = 44
-    Hint = 'Открытый документ, куда будет производиться экспорт'
-    Top = 10
-    Width = 670
-    EditLabel.Height = 36
-    EditLabel.Width = 281
-    EditLabel.Caption = 'Экспортировать в файл'
-    EditLabel.ParentColor = False
-    EditLabel.ParentFont = False
-    EditLabel.Font.Height = -26
-    Font.Height = -26
-    LabelPosition = lpLeft
-    ParentFont = False
-    TabOrder = 5
-  end
   object SpeedButton1: TSpeedButton
-    Left = 980
-    Height = 40
+    Left = 784
+    Height = 32
     Hint = 'Выбор отерытого документа'
-    Top = 10
-    Width = 40
+    Top = 8
+    Width = 32
     Flat = True
-    Font.Height = -26
+    Font.Height = -21
     Glyph.Data = {
       36100000424D3610000000000000360000002800000020000000200000000100
       2000000000000010000064000000640000000000000000000000000000000000
@@ -316,6 +299,27 @@ object frmNewExp: TfrmNewExp
       8BFF878C8AFF878B89FF868A88FF858988FF858987FF848886FF
     }
     OnClick = SpeedButton1Click
+    ParentFont = False
+  end
+  object cbDocName: TComboBox
+    Left = 224
+    Height = 33
+    Hint = 'Открытый документ, куда будет производиться экспорт'
+    Top = 8
+    Width = 552
+    Font.Height = -21
+    ItemHeight = 25
+    ParentFont = False
+    TabOrder = 5
+  end
+  object Label1: TLabel
+    Left = 8
+    Height = 25
+    Top = 9
+    Width = 213
+    Caption = 'Шаблон для экспорта'
+    Font.Height = -21
+    ParentColor = False
     ParentFont = False
   end
 end
