--- a/u_openff.lfm
+++ b/u_openff.lfm
@@ -1,80 +1,79 @@
 object frmOpenFF: TfrmOpenFF
   Left = 506
-  Height = 436
+  Height = 349
   Top = 225
-  Width = 878
+  Width = 702
   BorderStyle = bsDialog
   Caption = 'Список папок'
-  ClientHeight = 436
-  ClientWidth = 878
-  DesignTimePPI = 120
-  Font.Height = -26
+  ClientHeight = 349
+  ClientWidth = 702
+  Font.Height = -19
   LCLVersion = '2.0.10.0'
   object btDelFile: TButton
-    Left = 370
-    Height = 56
-    Top = 370
-    Width = 162
+    Left = 160
+    Height = 45
+    Top = 296
+    Width = 130
     Anchors = [akLeft, akBottom]
     Caption = 'Удалить'
-    Font.Height = -28
+    Font.Height = -21
     OnClick = btDelFileClick
     ParentFont = False
     TabOrder = 0
   end
   object btAddFile: TButton
-    Left = 190
-    Height = 56
-    Top = 370
-    Width = 172
+    Left = 8
+    Height = 45
+    Top = 296
+    Width = 138
     Anchors = [akLeft, akBottom]
     Caption = 'Добавить'
-    Font.Height = -28
+    Font.Height = -21
     OnClick = btAddFileClick
     ParentFont = False
     TabOrder = 1
   end
   object btOpenFile2: TButton
-    Left = 10
-    Height = 56
-    Top = 370
-    Width = 172
+    Left = 312
+    Height = 45
+    Top = 296
+    Width = 170
     Anchors = [akLeft, akBottom]
-    Caption = 'Открыть'
-    Font.Height = -28
+    Caption = 'Открыть файл'
+    Font.Height = -21
     OnClick = btOpenFile2Click
     ParentFont = False
     TabOrder = 2
   end
   object btOpenFile3: TButton
-    Left = 704
-    Height = 56
-    Top = 370
-    Width = 162
+    Left = 562
+    Height = 45
+    Top = 296
+    Width = 130
     Anchors = [akRight, akBottom]
-    Caption = 'Закрыть'
-    Font.Height = -28
+    Caption = 'Выбрать'
+    Font.Height = -21
     ModalResult = 2
     ParentFont = False
     TabOrder = 3
   end
   object ListBox1: TListBox
-    Left = 10
-    Height = 350
-    Top = 10
-    Width = 856
+    Left = 8
+    Height = 280
+    Top = 8
+    Width = 684
     Anchors = [akTop, akLeft, akRight, akBottom]
-    Font.Height = -26
+    Font.Height = -21
     ItemHeight = 0
     ParentFont = False
     TabOrder = 4
   end
   object OpenFile: TOpenDialog
-    Left = 40
-    Top = 50
+    Left = 32
+    Top = 40
   end
   object OpenFolder: TSelectDirectoryDialog
-    Left = 180
-    Top = 55
+    Left = 144
+    Top = 44
   end
 end
